# search-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: index_admin.rs  mod.rs  query.rs  scan.rs  server.rs
src-tauri/src/ingestion/: chunking.rs  coordinator.rs  embeddings.rs  enumerator.rs  incremental.rs  mod.rs  upsert.rs
src-tauri/src/ingestion/extract/: doc.rs  docx.rs  mod.rs  ocr.rs  pdf.rs
src-tauri/src/jobs/: queue.rs  worker.rs
src-tauri/src/retrieval/: citation.rs  extractive.rs  hybrid.rs  mod.rs  models.rs  prompt_builder.rs  query_embed.rs  query_engine.rs  rerank.rs  vector_search.rs
src-tauri/src/security/: mod.rs  prompt_guard.rs  sanitization.rs
src-tauri/src/server/: health.rs  lifecycle.rs  mod.rs  process.rs
src-tauri/src/storage/: keyword_store.rs  mod.rs  models.rs  sqlite.rs  vector_store.rs
src-tauri/src/storage/migrations/: 0001_init.sql  0002_seed_schema_version.sql
src-tauri/src/telemetry/: diagnostics.rs  logging.rs  mod.rs
src-tauri/tests/: integration_scan_query.rs  server_ownership.rs
src/app/: App.tsx
src/app/api/: tauri.ts
src/app/components/: ChatPanel.tsx  ErrorPanel.tsx  FolderPicker.tsx  ScanControls.tsx  ScanProgress.tsx  ServerStatusBadge.tsx  SourcesPanel.tsx
src/app/routes/: Home.tsx
src/app/store/: chatStore.ts  scanStore.ts  serverStore.ts
(+1 files in other folders)
